Add small script to make css, js, and html minified

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,9 +2,12 @@
 #   type: default
 project:
   type: website
+  post-render: 
+    - helpers/optimize.ts
 
 website:
   title: "African Adaptation Atlas"
+  search: false # disable search = performance increase
   navbar:
     title: "African Adaptation Atlas"
     logo: images/atlas-icon.svg
