Add a TOC that is less hacky to update than the quarto version when lang chagnes and fixed on the bottom.

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -7,25 +7,26 @@ project:
 
 website:
   title: "African Adaptation Atlas"
+  favicon: images/atlas-icon.svg
   search: false # disable search = performance increase
   navbar:
     title: "African Adaptation Atlas"
     logo: images/atlas-icon.svg
     logo-href: https://adaptationatlas.cgiar.org
     left:
-      # - href: index.qmd
-        # text: Home
+      - href: notebooks/index.qmd
+        text: Home
       - href: documentation/doc_index.qmd
         text: "Atlas Documentation"
-      # - about.qmd
-      # - href: WomensExposure.qmd
-      #   rel: 'WomensExposure'
-      #   text: "Gender"
+    right:
+      - icon: github
+        href: https://github.com/AdaptationAtlas/atlas_notebooks
+        # aria-label: GitHub
 format:
   html:
-    theme: cosmo
+    theme: cosmo # may get more performace benefits by using theme: none 
     css: styles.css
-    toc: true
+    toc: false # use our own to reduce complexity with lang and also increase performance
     include-in-header:
       - text: |
           <style type="text/css">
