updates for the overall styling, hero image, and a better template for new notebooks. Big fixes for the TOC now so it is stable, and also added in the language selector to the top nav-bar.

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -6,25 +6,32 @@ project:
     - helpers/optimize.ts
 
 website:
-  title: "African Adaptation Atlas"
+  # title: "African Adaptation Atlas"
   favicon: images/atlas-icon.svg
   search: false # disable search = performance increase
   navbar:
-    title: "African Adaptation Atlas"
-    logo: images/atlas-icon.svg
+    # title: "African Adaptation Atlas" # no title as we use the logo
+    logo: images/atlas-logo.svg
     logo-href: https://adaptationatlas.cgiar.org
-    left:
-      - href: notebooks/index.qmd
-        text: Home
-      - href: documentation/doc_index.qmd
-        text: "Atlas Documentation"
+    logo-alt: "The Africa Agriculture Adaptation Atlas"
+    # left:
+    #   - href: notebooks/index.qmd
+    #     text: Home
+    #   - href: documentation/doc_index.qmd
+    #     text: "Atlas Documentation"
     right:
+      - icon: bi-info-circle
+        text: "Documentation"
+        href: documentation/doc_index.qmd
+        aria-label: "More Information"
+      - text: "Report an Issue"
+        href: https://github.com/AdaptationAtlas/atlas_notebooks/issues/new
       - icon: github
         href: https://github.com/AdaptationAtlas/atlas_notebooks
-        # aria-label: GitHub
+        aria-label: "GitHub"
 format:
   html:
-    theme: cosmo # may get more performace benefits by using theme: none 
+    theme: cosmo
     css: styles.css
     toc: false # use our own to reduce complexity with lang and also increase performance
     include-in-header:
@@ -39,6 +46,9 @@ resources:
   - "data/*"
   - "helpers/*"
   - "images/*"
+
+execute: 
+  echo: false
 
 
 
