Added floating toc, updates to template, and a lot of other large chagnes. Also re-ported the gender notebook as an example.

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -33,14 +33,10 @@ format:
   html:
     theme: cosmo
     css: styles.css
+    grid:
+      body-width: 1150px
     toc: false # use our own to reduce complexity with lang and also increase performance
-    include-in-header:
-      - text: |
-          <style type="text/css">
-          h1.hide {
-            display: none;
-          }
-          </style>
+    anchor-sections: false
 
 resources:
   - "data/*"
