Add discover solution notebook example

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -33,8 +33,9 @@ format:
   html:
     theme: cosmo
     css: styles.css
-    grid:
-      body-width: 1150px
+    # grid:
+    #   body-width: 1150px - Width on OJS
+    
     toc: false # use our own to reduce complexity with lang and also increase performance
     anchor-sections: false
 
