Lots of added documentation and adding new functions from the old notebooks.

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,28 +1,26 @@
-# project:
-#   type: default
 project:
   type: website
-  post-render: 
+  output-dir: _site
+  post-render:
     - helpers/optimize.ts
 
 website:
   # title: "African Adaptation Atlas"
   favicon: images/atlas-icon.svg
   search: false # disable search = performance increase
+  sidebar: 
+    style: floating
+    alignment: left
+
   navbar:
     # title: "African Adaptation Atlas" # no title as we use the logo
     logo: images/atlas-logo.svg
     logo-href: https://adaptationatlas.cgiar.org
     logo-alt: "The Africa Agriculture Adaptation Atlas"
-    # left:
-    #   - href: notebooks/index.qmd
-    #     text: Home
-    #   - href: documentation/doc_index.qmd
-    #     text: "Atlas Documentation"
     right:
       - icon: bi-info-circle
         text: "Documentation"
-        href: documentation/doc_index.qmd
+        href: docs/doc_index.qmd
         aria-label: "More Information"
       - text: "Report an Issue"
         href: https://github.com/AdaptationAtlas/atlas_notebooks/issues/new
@@ -32,12 +30,16 @@ website:
 format:
   html:
     theme: cosmo
+    # theme: default
     css: styles.css
-    # grid:
-    #   body-width: 1150px - Width on OJS
+    grid:
+      content-mode: standard
+      gutter-width: 1.2em
+      sidebar-width: 200px
+      body-width: 1075px
     
-    toc: false # use our own to reduce complexity with lang and also increase performance
-    anchor-sections: false
+    toc: false # use custom to reduce complexity with lang and increase performance
+    anchor-sections: false # remove section link hovers
 
 resources:
   - "data/*"
@@ -46,6 +48,3 @@ resources:
 
 execute: 
   echo: false
-
-
-
