More cleaning and documentation getting first stable release of template ready

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -5,7 +5,6 @@ project:
     - helpers/optimize.ts
 
 website:
-  # title: "African Adaptation Atlas"
   favicon: images/atlas-icon.svg
   search: false # disable search = performance increase
   sidebar: 
@@ -13,7 +12,6 @@ website:
     alignment: left
 
   navbar:
-    # title: "African Adaptation Atlas" # no title as we use the logo
     logo: images/atlas-logo.svg
     logo-href: https://adaptationatlas.cgiar.org
     logo-alt: "The Africa Agriculture Adaptation Atlas"
@@ -30,7 +28,6 @@ website:
 format:
   html:
     theme: cosmo
-    # theme: default
     css: styles.css
     grid:
       content-mode: standard
@@ -42,9 +39,9 @@ format:
     anchor-sections: false # remove section link hovers
 
 resources:
-  - "data/*"
-  - "helpers/*"
-  - "images/*"
+  - "data"
+  - "helpers"
+  - "images"
 
 execute: 
-  echo: false
+  echo: false # don't show code unless explicitly requested
