Update and rename image

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -7,9 +7,9 @@ project:
 website:
   favicon: images/atlas-icon.svg
   search: false # disable search = performance increase
-  sidebar: 
-    style: floating
-    alignment: left
+  # sidebar: # Creates an empty sidebar which elements can be added to
+  #   style: floating
+  #   alignment: left
 
   navbar:
     logo: images/atlas-logo.svg
@@ -39,9 +39,9 @@ format:
     anchor-sections: false # remove section link hovers
 
 resources:
-  - "data"
-  - "helpers"
-  - "images"
+  - "data/"
+  - "helpers/"
+  - "images/"
 
 execute: 
   echo: false # don't show code unless explicitly requested
