Changes to imported lang.js module due to how the url was being handled on build wiht absolute vs. relative paths. had to roll back to relative

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,11 +1,13 @@
 project:
   type: website
   output-dir: _site
+  # execute-dir: project
   post-render:
     - helpers/optimize.ts
 
 website:
   favicon: images/atlas-icon.svg
+  site-url: https://adaptationatlas.github.io/atlas_notebooks/
   search: false # disable search = performance increase
   # sidebar: # Creates an empty sidebar which elements can be added to
   #   style: floating
@@ -39,9 +41,9 @@ format:
     anchor-sections: false # remove section link hovers
 
 resources:
-  - "data/"
-  - "helpers/"
-  - "images/"
+  - data/
+  - helpers/
+  - images/
 
 execute: 
   echo: false # don't show code unless explicitly requested
