--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 /.quarto/
 node_modules
 _site
+!data/DiscoverSolutions
+!data/genderNotebook
 # Ignore everything under /data
 /data/*
 !/data/shared/
