--- a/.github/workflows/cloudflareDeploy.yml
+++ b/.github/workflows/cloudflareDeploy.yml
@@ -32,7 +32,5 @@ jobs:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
           command: |
-            pages deploy _site \
-              --project-name=AtlasNotebooks \
-              --branch=${{ github.head_ref || github.ref_name }}
+            pages deploy _site --project-name=AtlasNotebooks --branch=${{ github.head_ref || github.ref_name }}
           gitHubToken: ${{ secrets.GITHUB_TOKEN }}
