--- a/.github/workflows/cloudflareDeploy.yml
+++ b/.github/workflows/cloudflareDeploy.yml
@@ -6,8 +6,9 @@ on:
       - main
       - develop
       - example
+      - template
   pull_request:
-    branches: [ "main"]
+    branches: [ "main", "develop" ]
 
 jobs:
   build-and-deploy:
