ci(cloudflare pages): Add some files to ignore to avoid re-deploying with non-website changes.

--- a/.github/workflows/cloudflareDeploy.yml
+++ b/.github/workflows/cloudflareDeploy.yml
@@ -7,8 +7,15 @@ on:
       - develop
       - example
       - template
+    paths-ignore:
+      - 'README.md'
+      - 'CONTRIBUTING.md'
+      - .gitignore
+      - 'LICENSE*'
   pull_request:
-    branches: [ "main", "develop" ]
+    branches: 
+     - main
+     - develop
 
 jobs:
   build-and-deploy:
