fix(quarto.yml): Add some file exclusions and inclusions for render - only render .qmd files by default
missed a comma in optimize, function

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,9 +1,13 @@
 project:
   type: website
+  render: 
+   - "*.qmd"
+   - "*.md"
+   - "!README.md"
+   - "!CONTRIBUTING.md"
   output-dir: _site
-  # execute-dir: project
   post-render:
-    - helpers/optimize.ts
+    - helpers/optimize.ts # This script minifies all css, html, and JS rendered by quarto to reduce file size
 
 website:
   favicon: images/atlas-icon.svg
