ci(GH Action): Update GH action to deploy to pages for PR against template as well

--- a/.github/workflows/cloudflareDeploy.yml
+++ b/.github/workflows/cloudflareDeploy.yml
@@ -8,14 +8,15 @@ on:
       - example
       - template
     paths-ignore:
-      - 'README.md'
-      - 'CONTRIBUTING.md'
+      - "README.md"
+      - "CONTRIBUTING.md"
       - .gitignore
-      - 'LICENSE*'
+      - "LICENSE*"
   pull_request:
-    branches: 
-     - main
-     - develop
+    branches:
+      - main
+      - develop
+      - template
 
 jobs:
   build-and-deploy:
