fix(styling): Remove light and dark mode for now, fix default font to match Atlas
The method of setting the font via CSS wasn't seeming to work - even with !important flag. Calling the font in the _quarto.yml instead. Also removing the light-dark mode for now as no time to make it look good

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,10 +1,10 @@
 project:
   type: website
-  render: 
-   - "*.qmd"
-   - "*.md"
-   - "!README.md"
-   - "!CONTRIBUTING.md"
+  render:
+    - "*.qmd"
+    - "*.md"
+    - "!README.md"
+    - "!CONTRIBUTING.md"
   output-dir: _site
   post-render:
     - helpers/optimize.ts # This script minifies all css, html, and JS rendered by quarto to reduce file size
@@ -34,13 +34,15 @@ website:
 format:
   html:
     theme: cosmo
+    include-in-header: _include.html # This includes path the google font api
+    mainfont: "IBM Plex Sans"
     css: styles.css
     grid:
       content-mode: standard
       gutter-width: 1.2em
       sidebar-width: 200px
       body-width: 1075px
-    
+
     toc: false # use custom to reduce complexity with lang and increase performance
     anchor-sections: false # remove section link hovers
 
@@ -49,5 +51,5 @@ resources:
   - helpers/
   - images/
 
-execute: 
+execute:
   echo: false # don't show code unless explicitly requested
