ci(cloudflare deploy): Deploy any branch under notebooks/
Added to allow rending of the ROI notebook and future notebooks easier

--- a/.github/workflows/cloudflareDeploy.yml
+++ b/.github/workflows/cloudflareDeploy.yml
@@ -7,6 +7,7 @@ on:
       - develop
       - example
       - template
+      - "notebooks/*"
     paths-ignore:
       - "README.md"
       - "CONTRIBUTING.md"
