--- a/_quarto.yml
+++ b/_quarto.yml
@@ -38,10 +38,10 @@ format:
     mainfont: "IBM Plex Sans"
     css: styles.css
     grid:
-      content-mode: standard
-      gutter-width: 1.2em
-      sidebar-width: 200px
-      body-width: 1075px
+      # content-mode: standard
+      # gutter-width: 1.2em
+      # sidebar-width: 200px
+      body-width: 1180px
 
     toc: false # use custom to reduce complexity with lang and increase performance
     anchor-sections: false # remove section link hovers
