--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 /.quarto/
 # Ignore everything under /data
 /data/*
-!/data/shared/
-!/data/shared/**
+# !/data/shared/
+# !/data/shared/**
 _site
 */libs/
 /.luarc.json
