Update Cloudflare deployment workflow to use Wrangler v3
- Add Node.js setup step
- Install Wrangler globally
- Switch from cloudflare/wrangler-action to direct wrangler command
- Use environment variables for API token and account ID

--- a/.github/workflows/cloudflareDeploy.yml
+++ b/.github/workflows/cloudflareDeploy.yml
@@ -13,6 +13,7 @@ on:
       - "CONTRIBUTING.md"
       - .gitignore
       - "LICENSE*"
+
   pull_request:
     branches:
       - main
@@ -30,17 +31,27 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v4
 
+      # ✅ REQUIRED FOR WRANGLER V3
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18
+
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
 
       - name: Render site
         uses: quarto-dev/quarto-actions/render@v2
 
+      # Optional but stabilizes wrangler
+      - name: Install Wrangler
+        run: npm install -g wrangler
+
       - name: Deploy to Cloudflare Pages
-        uses: cloudflare/wrangler-action@v3
-        with:
-          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
-          command: |
-            pages deploy _site --project-name=adaptation-atlas-nb --branch=${{ github.head_ref || github.ref_name }}
-          gitHubToken: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          wrangler pages deploy _site \
+            --project-name=adaptation-atlas-nb \
+            --branch=${{ github.head_ref || github.ref_name }}
+        env:
+          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
