Remove large CSV files before Cloudflare Pages deployment
- Add step to remove CSV files larger than 25 MiB before deployment
- Prevents deployment errors due to Cloudflare's file size limit
- Parquet versions of the data files are available and will be used instead

--- a/.github/workflows/cloudflareDeploy.yml
+++ b/.github/workflows/cloudflareDeploy.yml
@@ -47,6 +47,31 @@ jobs:
       - name: Install Wrangler
         run: npm install -g wrangler
 
+      # Remove large CSV files that exceed Cloudflare's 25 MiB limit (25 * 1024 * 1024 = 26214400 bytes)
+      # Parquet versions are available and will be used instead
+      - name: Remove large CSV files
+        run: |
+          python3 << 'EOF'
+          import os
+          import glob
+          
+          max_size = 25 * 1024 * 1024  # 25 MiB in bytes
+          removed = []
+          
+          for csv_file in glob.glob("_site/**/*.csv", recursive=True):
+              size = os.path.getsize(csv_file)
+              if size > max_size:
+                  os.remove(csv_file)
+                  removed.append(f"{csv_file} ({size / (1024*1024):.1f} MiB)")
+          
+          if removed:
+              print("Removed large CSV files:")
+              for f in removed:
+                  print(f"  - {f}")
+          else:
+              print("No large CSV files found to remove")
+          EOF
+
       - name: Deploy to Cloudflare Pages
         run: |
           wrangler pages deploy _site \
