--- a/.github/workflows/cloudflareDeploy.yml
+++ b/.github/workflows/cloudflareDeploy.yml
@@ -13,7 +13,6 @@ on:
       - "CONTRIBUTING.md"
       - .gitignore
       - "LICENSE*"
-
   pull_request:
     branches:
       - main
@@ -31,52 +30,17 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v4
 
-      # ✅ REQUIRED FOR WRANGLER V3
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
 
       - name: Render site
         uses: quarto-dev/quarto-actions/render@v2
 
-      # Optional but stabilizes wrangler
-      - name: Install Wrangler
-        run: npm install -g wrangler
-
-      # Remove large CSV files that exceed Cloudflare's 25 MiB limit (25 * 1024 * 1024 = 26214400 bytes)
-      # Parquet versions are available and will be used instead
-      - name: Remove large CSV files
-        run: |
-          python3 << 'EOF'
-          import os
-          import glob
-          
-          max_size = 25 * 1024 * 1024  # 25 MiB in bytes
-          removed = []
-          
-          for csv_file in glob.glob("_site/**/*.csv", recursive=True):
-              size = os.path.getsize(csv_file)
-              if size > max_size:
-                  os.remove(csv_file)
-                  removed.append(f"{csv_file} ({size / (1024*1024):.1f} MiB)")
-          
-          if removed:
-              print("Removed large CSV files:")
-              for f in removed:
-                  print(f"  - {f}")
-          else:
-              print("No large CSV files found to remove")
-          EOF
-
       - name: Deploy to Cloudflare Pages
-        run: |
-          wrangler pages deploy _site \
-            --project-name=adaptation-atlas-nb \
-            --branch=${{ github.head_ref || github.ref_name }}
-        env:
-          CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+        uses: cloudflare/wrangler-action@v3
+        with:
+          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          accountId: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
+          command: |
+            pages deploy _site --project-name=adaptation-atlas-nb --branch=${{ github.head_ref || github.ref_name }}
+          gitHubToken: ${{ secrets.GITHUB_TOKEN }}
