--- a/_quarto.yml
+++ b/_quarto.yml
@@ -5,6 +5,7 @@ project:
     - "*.md"
     - "!README.md"
     - "!CONTRIBUTING.md"
+    - "!CHANGELOG.md"
   output-dir: _site
   post-render:
     - helpers/optimize.ts # This script minifies all css, html, and JS rendered by quarto to reduce file size
