feat: Add in index page from v1 notebooks, hero from v1 notebooks, and do some final cleaning to get prod ready

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -5,6 +5,7 @@ project:
     - "*.md"
     - "!README.md"
     - "!CONTRIBUTING.md"
+    - "CHANGELOG.md"
   output-dir: _site
   post-render:
     - helpers/optimize.ts # This script minifies all css, html, and JS rendered by quarto to reduce file size
@@ -12,10 +13,7 @@ project:
 website:
   favicon: images/atlas-icon.svg
   site-url: https://adaptationatlas.github.io/atlas_notebooks/
-  search: false # disable search = performance increase
-  # sidebar: # Creates an empty sidebar which elements can be added to
-  #   style: floating
-  #   alignment: left
+  search: false
 
   navbar:
     logo: images/atlas-logo.svg
@@ -50,6 +48,7 @@ resources:
   - data/
   - helpers/
   - images/
+  - "notebooks.json"
 
 execute:
   echo: false # don't show code unless explicitly requested
