--- a/_quarto.yml
+++ b/_quarto.yml
@@ -34,7 +34,7 @@ format:
     theme: cosmo
     include-in-header: _include.html # This includes path the google font api
     mainfont: "IBM Plex Sans"
-    css: styles.css
+    css: styles/main.css
     grid:
       # content-mode: standard
       # gutter-width: 1.2em
