refactor: Move contributing to docs to clean up project root a bit

--- a/.github/workflows/cloudflareDeploy.yml
+++ b/.github/workflows/cloudflareDeploy.yml
@@ -10,7 +10,7 @@ on:
       - "notebooks/*"
     paths-ignore:
       - "README.md"
-      - "CONTRIBUTING.md"
+      - "docs/CONTRIBUTING.md"
       - .gitignore
       - "LICENSE*"
   pull_request:
