--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,7 +4,7 @@ project:
     - "*.qmd"
     - "*.md"
     - "!README.md"
-    - "!CONTRIBUTING.md"
+    - "!docs/CONTRIBUTING.md"
     - "CHANGELOG.md"
   output-dir: _site
   post-render:
