chore: Restructure and clean project directory for more clarity and maintainability. Update docs to reflect this

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,7 +8,7 @@ project:
     - "CHANGELOG.md"
   output-dir: _site
   post-render:
-    - helpers/optimize.ts # This script minifies all css, html, and JS rendered by quarto to reduce file size
+    - scripts/build/optimize.ts # minify all css, html, and JS rendered by quarto to reduce file size
 
 website:
   favicon: images/atlas-icon.svg
@@ -54,4 +54,4 @@ execute:
   echo: false # don't show code unless explicitly requested
 
 filters:
-  - "lua/csv2json.lua" # lua filter to convert files on render
+  - "scripts/build/csv2json.lua" # lua filter to convert files on render
