feat(styles): Handle global in scss rather than header import. also have seperate css stylesheet for observable inputs

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -31,9 +31,9 @@ website:
         aria-label: "GitHub"
 format:
   html:
-    theme: cosmo
-    include-in-header: _include.html # This includes path the google font api
-    mainfont: "IBM Plex Sans"
+    theme:
+      - cosmo
+      - styles/font.scss
     css: styles/main.css
     grid:
       # content-mode: standard
