chore(prek): Add and run prek

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,4 +2,6 @@ repos:
   - repo: builtin
     hooks:
       - id: trailing-whitespace
+      - id: check-json
+      - id: check-yaml
       - id: check-added-large-files
