refactor: chunk out index code into more managable components. Also add brand.yml to manage fonts in a more quarto way.

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,13 +4,12 @@ project:
     - "*.qmd"
   output-dir: _site
   post-render:
-    - scripts/build/optimize.ts # minify all css, html, and JS rendered by quarto to reduce file size
+    - scripts/build/optimize.ts # minify files rendered by quarto to reduce file size
 
 website:
   favicon: images/atlas-icon.svg
   site-url: https://adaptationatlas.github.io/atlas_notebooks/
   search: false
-
   navbar:
     logo: images/atlas-logo.svg
     logo-href: https://adaptationatlas.cgiar.org
@@ -25,19 +24,15 @@ website:
       - icon: github
         href: https://github.com/AdaptationAtlas/atlas_notebooks
         aria-label: "GitHub"
+
 format:
   html:
     theme:
       - cosmo
-      - styles/font.scss
     css: styles/main.css
     grid:
-      # content-mode: standard
-      # gutter-width: 1.2em
-      # sidebar-width: 200px
       body-width: 1180px
-
-    toc: false # use custom to reduce complexity with lang and increase performance
+    toc: false # complex/not useful with how we handle translations
     anchor-sections: false # remove section link hovers
 
 resources:
