refactor(back-to-top): Clean back to top button and add it to ROI Notebook

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -24,9 +24,15 @@ website:
       - icon: github
         href: https://github.com/AdaptationAtlas/atlas_notebooks
         aria-label: "GitHub"
+  page-footer:
+    left: "© 2026 AAA & CGIAR"
 
 format:
   html:
+    title-block-style: none
+    include-in-header:
+      - text: |
+          <script src="/components/backToTop.js"></script>
     theme:
       - cosmo
     css: styles/main.css
